apps/base/opencode/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: opencode
  namespace: app-opencode

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`opencode.cluster.arpa`)
      kind: Rule
      services:
        - name: opencode
          namespace: app-opencode
          port: http
  tls:
    secretName: traefik-tls
